<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="reset">Reset</string>
    <string name="weight_in_kg">Weight (in KG) :</string>
    <string name="height_in_meter">Height (in Meter) :</string>
    <string name="calculate">Calculate</string>
    <string name="_0_00">0.00</string>
    <string name="bmi">BMI :</string>
    <string name="desc">()</string>
</resources>
